[project]
name = "unit-of-work"
version = "0.1.0"
description = "Simple implementation Unit of Work pattern (M.Flower)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.3.0",
    "litestar>=2.12.1",
    "requests>=2.32.3",
    "ruff>=0.6.9",
    "starlite>=1.51.16",
    "uvicorn>=0.32.0",
]
